{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 60,
  "lineage": "0c0c6554-b9c9-3834-9c62-ad4f9fb21005",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cffc7a7379a77f2f",
            "domain": "vpc",
            "id": "eipalloc-0d4ab285cc9df83da",
            "network_interface": "eni-0ca60588cd47b73d5",
            "private_dns": "ip-192-168-0-238.ec2.internal",
            "private_ip": "192.168.0.238",
            "public_dns": "ec2-52-201-114-167.compute-1.amazonaws.com",
            "public_ip": "52.201.114.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-cka-tutorial-pub_0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-009cef0eca946cff6",
            "domain": "vpc",
            "id": "eipalloc-098df54f3db5de172",
            "network_interface": "eni-06e60838144a2bf2d",
            "private_dns": "ip-192-168-66-6.ec2.internal",
            "private_ip": "192.168.66.6",
            "public_dns": "ec2-3-213-249-173.compute-1.amazonaws.com",
            "public_ip": "3.213.249.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-cka-tutorial-pub_1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:143287522423:instance/i-04751bca4edf6265f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04751bca4edf6265f",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu_laptop",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d85cf3435ed02ff3",
            "private_dns": "ip-192-168-47-48.ec2.internal",
            "private_ip": "192.168.47.48",
            "public_ip": "54.89.83.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0183eac5552459410",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0096424961099dc5b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b7bb0e9659348e8"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_subnet.pub_0"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0678569b3ede03933",
            "owner_id": "143287522423",
            "tags": {
              "Name": "k8s-cka-tutorial"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pub_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4ab285cc9df83da",
            "id": "nat-0b181ff694f89df32",
            "network_interface_id": "eni-0ca60588cd47b73d5",
            "private_ip": "192.168.0.238",
            "public_ip": "52.201.114.167",
            "subnet_id": "subnet-0096424961099dc5b",
            "tags": {
              "Name": "k8s-cka-tutorial-pub_0"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.pub_0",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.pub_0",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pub_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098df54f3db5de172",
            "id": "nat-08895c1857de5973a",
            "network_interface_id": "eni-06e60838144a2bf2d",
            "private_ip": "192.168.66.6",
            "public_ip": "3.213.249.173",
            "subnet_id": "subnet-0b1aa2dddefa62b8b",
            "tags": {
              "Name": "k8s-cka-tutorial-pub_1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.pub_1",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.pub_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-031d97ec35c1b8026",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "143287522423",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0096424961099dc5b",
              "subnet-0b0d5f65556bd039b",
              "subnet-0b1aa2dddefa62b8b",
              "subnet-0d200c34020da5b25"
            ],
            "tags": {
              "Name": "k8s-cka-tutorial"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_subnet.priv_0",
            "module.vpc.aws_subnet.priv_1",
            "module.vpc.aws_subnet.pub_0",
            "module.vpc.aws_subnet.pub_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0644b4c921aeac49b",
            "owner_id": "143287522423",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b181ff694f89df32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-cka-tutorial-priv_0"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_eip.pub_0",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.pub_0",
            "module.vpc.aws_subnet.pub_0",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe11ac132a2cc14b",
            "owner_id": "143287522423",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08895c1857de5973a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-cka-tutorial-priv_1"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_eip.pub_1",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.pub_1",
            "module.vpc.aws_subnet.pub_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b923a701ecdf9a22",
            "owner_id": "143287522423",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0678569b3ede03933",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-cka-tutorial-pub"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7476a0e4a85c3b2",
            "route_table_id": "rtb-0644b4c921aeac49b",
            "subnet_id": "subnet-0d200c34020da5b25"
          },
          "dependencies": [
            "module.vpc.aws_route_table.priv_0",
            "module.vpc.aws_subnet.priv_0"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00acde228bada52ef",
            "route_table_id": "rtb-0fe11ac132a2cc14b",
            "subnet_id": "subnet-0b0d5f65556bd039b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.priv_1",
            "module.vpc.aws_subnet.priv_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bbff7f4cae8a7dd",
            "route_table_id": "rtb-0b923a701ecdf9a22",
            "subnet_id": "subnet-0096424961099dc5b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.pub",
            "module.vpc.aws_subnet.pub_0",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002a82a5c80cf0148",
            "route_table_id": "rtb-0b923a701ecdf9a22",
            "subnet_id": "subnet-0b1aa2dddefa62b8b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.pub",
            "module.vpc.aws_subnet.pub_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143287522423:security-group/sg-06b7bb0e9659348e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b7bb0e9659348e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "k8s-cka-tutorial-bastion",
            "name_prefix": null,
            "owner_id": "143287522423",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143287522423:security-group/sg-07a426a92ef21dc84",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a426a92ef21dc84",
            "ingress": [],
            "name": "k8s-cka-tutorial-ControlPlaneSecurityGroup",
            "name_prefix": null,
            "owner_id": "143287522423",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143287522423:security-group/sg-0f19c9300e943f804",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f19c9300e943f804",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b7bb0e9659348e8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k8s-cka-tutorial-remoteAccess",
            "name_prefix": null,
            "owner_id": "143287522423",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1890995222",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06b7bb0e9659348e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ingress_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2400233903",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06b7bb0e9659348e8",
            "self": false,
            "source_security_group_id": "sg-06b7bb0e9659348e8",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1098329736",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b7bb0e9659348e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-950202286",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07a426a92ef21dc84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.control_plane",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "remote_access_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1775489430",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f19c9300e943f804",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.remote_access",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "remote_access_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1287379172",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f19c9300e943f804",
            "self": false,
            "source_security_group_id": "sg-06b7bb0e9659348e8",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.remote_access",
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143287522423:subnet/subnet-0d200c34020da5b25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.128.0/18",
            "id": "subnet-0d200c34020da5b25",
            "map_public_ip_on_launch": false,
            "owner_id": "143287522423",
            "tags": {
              "Name": "k8s-cka-tutorial-priv_0",
              "Tier": "Private",
              "kubernetes.io/cluster/k8s-cka-tutorial": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143287522423:subnet/subnet-0b0d5f65556bd039b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.192.0/18",
            "id": "subnet-0b0d5f65556bd039b",
            "map_public_ip_on_launch": false,
            "owner_id": "143287522423",
            "tags": {
              "Name": "k8s-cka-tutorial-priv_1",
              "Tier": "Private",
              "kubernetes.io/cluster/k8s-cka-tutorial": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143287522423:subnet/subnet-0096424961099dc5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/18",
            "id": "subnet-0096424961099dc5b",
            "map_public_ip_on_launch": true,
            "owner_id": "143287522423",
            "tags": {
              "Name": "k8s-cka-tutorial-pub_0",
              "Tier": "Public",
              "kubernetes.io/cluster/k8s-cka-tutorial": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143287522423:subnet/subnet-0b1aa2dddefa62b8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.64.0/18",
            "id": "subnet-0b1aa2dddefa62b8b",
            "map_public_ip_on_launch": true,
            "owner_id": "143287522423",
            "tags": {
              "Name": "k8s-cka-tutorial-pub_1",
              "Tier": "Public",
              "kubernetes.io/cluster/k8s-cka-tutorial": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bbca803b6e3634af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143287522423:vpc/vpc-0bbca803b6e3634af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e660ea4c8ed9fc6f",
            "default_route_table_id": "rtb-0f5a6dcd7ec5d1159",
            "default_security_group_id": "sg-0d53906616e30eabe",
            "dhcp_options_id": "dopt-1633e86c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bbca803b6e3634af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f5a6dcd7ec5d1159",
            "owner_id": "143287522423",
            "tags": {
              "Name": "k8s-cka-tutorial"
            }
          }
        }
      ]
    }
  ]
}